# json

./: .gitignore  .gitmodules  .tasks  CMakeLists.txt  README.md  main.cpp
.github/workflows/: codeql-analysis.yml
include/: json.h  json.hpp  json_base.hpp  value_warp.hpp  value_warp_const.hpp
include/parse/: parse.h  reader.h  reader.hpp
include/parser/: object_parser.hpp  parse.hpp  parser.hpp  reader.hpp
include/utils/: reader.h  shared_not_null_ptr.hpp
include/value/: array.hpp  bool.hpp  none.hpp  null.hpp  number.h  number.hpp  object.hpp  string.hpp  value_base.hpp  value_base_pptr.hpp  value_warp.hpp
src/: json.cpp  json_dump.cpp  json_parse.cpp  json_pretty.cpp  parse.cpp
src/parse/: parse.cpp  reader.cpp
src/utils/: reader.cpp
src/value/: number.cpp
test/: CMakeLists.txt
test/src/: generator_test.cpp  parser_test1.cpp
tool/: amalgamate.txt  amalgamate.yml  amalgamate_to_one.sh  install_googletest.sh
